src/test/test-models/good/vector_size_lt_zero.stan
data { 
  int d;
} 
parameters {
  vector[d] p_ltzero;
} 
model {
}

