src/test/test-models/bad/oneline-error.stan
parameters { vector y[10]; } model { }